RESOLVED FIXED198467
[JSC] Crash explicitly if StructureIDs are exhausted
https://bugs.webkit.org/show_bug.cgi?id=198467
Summary [JSC] Crash explicitly if StructureIDs are exhausted
Yusuke Suzuki
Reported 2019-06-02 04:12:56 PDT
[JSC] Crash explicitly if StructureIDs are exhaust
Attachments
Patch (2.57 KB, patch)
2019-06-02 04:19 PDT, Yusuke Suzuki
no flags
Archive of layout-test-results from ews211 for win-future (13.83 MB, application/zip)
2019-06-02 11:31 PDT, EWS Watchlist
no flags
Yusuke Suzuki
Comment 2 2019-06-02 04:19:11 PDT
Yusuke Suzuki
Comment 3 2019-06-02 04:21:19 PDT
EWS Watchlist
Comment 4 2019-06-02 11:30:59 PDT
Comment on attachment 371143 [details] Patch Attachment 371143 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12356644 New failing tests: http/tests/css/filters-on-iframes-transform.html
EWS Watchlist
Comment 5 2019-06-02 11:31:02 PDT
Created attachment 371160 [details] Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Yusuke Suzuki
Comment 6 2019-06-02 14:48:21 PDT
Comment on attachment 371143 [details] Patch Thanks!
WebKit Commit Bot
Comment 7 2019-06-02 15:18:12 PDT
Comment on attachment 371143 [details] Patch Clearing flags on attachment: 371143 Committed r246024: <https://trac.webkit.org/changeset/246024>
WebKit Commit Bot
Comment 8 2019-06-02 15:18:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.